
  In order to get Msged up and running, if you have libfidoconfig installed
  and a proper fidoconfig config file, the following ~/.msged file will be
  sufficient:

    Areafileflags 8u
    Areafile Fidoconfig Both

  After that, you can add any private setttings you would like to have, but
  the above two lines are enough to get a working Msged,.

  [TODO: Write documentation about this in the manual]

- Unix: New Switch "AdaptiveCase". If you set "Switch Adaptivecase On"
  at the beginning of your configuration file, MsgEd will treat all
  file names case insensitively (i.E. it before trying to open any file,
  it will look into the directory and determine how it is spelled).

  You should set this switch to On if you are using MsgEd together
  with a message base or nodelist which is mounted from an DOSish (OS/2,
  Windows, DOS) platform which has a case insensitive file system. Those
  message bases usually use lower and upper case in a wild mix (i.E.
  both .msg and .MSG and .Msg files, etc. pp.). Th adaptivecase switch
  allows MsgEd to cope with such directories.

  If you are sure that you do not have case sensitivity problems, probably
  because you are using Unix software exclusively, you can set this switch
  to Off. This will gain you a little performance improvement and about
  200K memory. (These 200K are used by the AdaptiveCase feature as a
  file system cache, because otherwise it would be too slow).

- Unix: MsgEd TE is now able to correctly recognize the terminal size. It is
  also able to recoginze when the size of the xterm it is running in is
  changed and adapts itself accordingly.

- MsgEd is now able to read the mail area configuration from GEcho 1.20.
  Use it like "AreaFile GEcho c:\mailbox\gecho". The parameter to "AreaFile
  GEcho" designates the *directory name* where GEcho is installed. Inside
  this directory, the files "SETUP.GE" and "AREAFILE.GE" must exist.
  Thanks to Jesper Soerensen for contributing this code.
